# Mistral_Markitdown

./: .cursorignore  .cursorindexingignore  .env  .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  ANSWERS_TO_YOUR_QUESTIONS.md  API_CORRECTION_NOTICE.md  ARCHITECTURE.md  CHANGELOG.md  CHANGELOG_v2.1.1.md  CHANGES_SUMMARY.md  CLAUDE.md  CODEBASE_AUDIT_REPORT.md  CONFIGURATION.md  CONTRIBUTING.md  DEPENDENCIES.md  DOCUMENTATION_INDEX.md  FINAL_REPORT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_CONTRACT.md  Instructions.txt  KNOWN_ISSUES.md  LICENSE  Makefile  QUICKSTART.md  README.md  REVIEW_SUMMARY.md  SECURITY.md  START_HERE.md  UPGRADE_SUMMARY.md  config.py  cursor-settings-recommendations.md  local_converter.py  main.py  mistral_converter.py  (+11 more)
.claude/: settings.local.json
.cursor/: hooks.json
.cursor/agents/: researcher.md  test-runner.md  verifier.md
.cursor/commands/: explain.md  migration-plan.md  pr-description.md  refactor-plan.md  review.md  test-plan.md
.cursor/hooks/: after-file-format.sh  before-shell-guard.sh  stop-scoped-tests.sh
.cursor/rules/: 00-baseline.mdc  10-python-backend.mdc
.github/workflows/: lint.yml  publish.yml  security.yml  test.yml
.serena/: project.yml
.serena/cache/python/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: code_style_conventions.md  codebase_structure.md  development_workflow.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
cursor-setup-updates/: CHANGES.md  SKILL.md
cursor-setup-updates/templates/: after-file-format.sh  before-mcp-guard.sh  before-shell-guard.sh  stop-scoped-tests.sh  subagent-gate.sh
docs/: ARCHITECTURE.md  conf.py  index.rst  modules.rst
scripts/: quick_start.sh  run_converter.bat  test-safe.sh
tests/: __init__.py  conftest.py  test_config.py  test_local_converter.py  test_mistral_converter.py  test_pipeline.py  test_schemas.py  test_utils.py
