[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mistral-markitdown"
version = "3.0.0"
description = "Enhanced Document Converter with MarkItDown and Mistral AI OCR"
readme = "README.md"
requires-python = ">=3.10,<4"
license = "MIT"
authors = [
    {name = "Enhanced Document Converter Contributors"}
]
keywords = ["document", "conversion", "ocr", "pdf", "markdown", "mistral", "markitdown"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "markitdown[pdf,docx,pptx,xlsx,xls,outlook]==0.1.5",
    "mistralai==2.1.3",
    "python-dotenv>=1.2.0",
    "pydantic>=2,<3",
    "Pillow>=10,<13",
    "pdfplumber>=0.11.9",
    "pdf2image>=1.17.0",
]

[project.optional-dependencies]
dev = [
    "pypdf>=3.0.0",
    "pytest>=9.0",
    "pytest-cov>=7.1",
    "pytest-mock>=3.15",
    "pytest-asyncio>=1.3",
    "pytest-xdist>=3.8",
    "flake8>=7.3",
    "black>=26.3",
    "isort>=8.0",
    "pip-audit>=2.0.0",
    "bandit>=1.7.0",
    "pre-commit>=4.5",
    "build>=1.4",
    "twine>=6.2",
]

[project.scripts]
mistral-markitdown = "main:main"

[project.urls]
Homepage = "https://github.com/jaim12005/Mistral_Markitdown"
Repository = "https://github.com/jaim12005/Mistral_Markitdown"
Issues = "https://github.com/jaim12005/Mistral_Markitdown/issues"
Documentation = "https://github.com/jaim12005/Mistral_Markitdown/blob/main/CONFIGURATION.md"
Changelog = "https://github.com/jaim12005/Mistral_Markitdown/blob/main/CHANGELOG.md"

[tool.setuptools]
py-modules = ["main", "config", "schemas", "mistral_converter", "local_converter", "utils", "run_tests"]
packages = []

[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | env
  | venv
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/venv/*", "*/env/*", "*/.venv/*"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["." ]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = false

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/env/*",
    "*/.venv/*",
    "*/build/*",
    "*/dist/*",
    "run_tests.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
